--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dat.gui": "^0.7.9",
     "selenium-webdriver": "^4.24.1"
   },
-  "mocha":"^10.2.0"
+  "mocha": "^10.2.0"
 }
